# di

./: .gitignore  BUILD-WEB-DOCKER.md  BUILD-WEB.md  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
crates/di/: Cargo.toml
crates/di-macros/: Cargo.toml
crates/di-macros/src/: generate.rs  lib.rs  parse.rs  tests.rs
crates/di-macros/src/snapshots/: studiole_di_macros__tests__async_mixed_concrete_and_trait_fields.snap  studiole_di_macros__tests__async_mixed_fields.snap  studiole_di_macros__tests__async_multiple_fields.snap  studiole_di_macros__tests__async_trait_field.snap  studiole_di_macros__tests__async_unit_struct.snap  studiole_di_macros__tests__sync_all_default_fields.snap  studiole_di_macros__tests__sync_mixed_concrete_and_trait_fields.snap  studiole_di_macros__tests__sync_mixed_fields.snap  studiole_di_macros__tests__sync_multiple_fields.snap  studiole_di_macros__tests__sync_single_field.snap  studiole_di_macros__tests__sync_trait_field.snap  studiole_di_macros__tests__sync_unit_struct.snap
crates/di/src/: lib.rs  prelude.rs  service.rs  service_builder.rs  service_provider.rs
crates/di/src/async/: from_provider_async.rs  from_services_async.rs  mod.rs  service_builder_async.rs  service_builder_async_traits.rs  service_provider_async.rs  service_provider_async_traits.rs
crates/di/src/extensions/: downcast.rs  expect_init.rs  expect_service.rs  into_any.rs  mod.rs
crates/di/src/schema/: aliases.rs  from_provider.rs  from_services.rs  init.rs  mod.rs  registration.rs  scope.rs  service_registry.rs  test_cache.rs  test_services.rs
crates/di/src/traits/: mod.rs  service_builder_with_trait.rs  service_provider_get_trait.rs
docker/dioxus/: Dockerfile  docker-compose.yml
docs/migration-guides/: 0.2-to-0.3.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: episode.spec.ts  index.spec.ts  podcast.spec.ts  settings.spec.ts
