[workspace]
resolver = "3"
members = [
    "packages/cli",
    "packages/core",
    "packages/dioxus",
    "packages/services",
]

[workspace.package]
version = "0.0.0"
authors = ["Laurence Elsdon <le@studiole.uk>"]
edition = "2021"
description = "A self hosted podcast library"
documentation = "https://github.com/StudioLE/Alnwick"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
dioxus = { version = "0.7.0", features = ["fullstack", "router"] }
dirs = { version = "6.0.0" }
envy = { version = "0.4.2" }
error-stack = { version = "0.6.0", features = ["serde", "tracing"] }
futures = { version = "0.3.31" }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
rss = { version = "2.0.12", features = ["validation"] }
scraper = { version = "0.24.0" }
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
strum_macros = { version = "0.27.2" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter"] }
tracing-test = "0.2.5"
fast_image_resize = { version = "5.3.0", features = ["image"] }
image = { version = "0.25.8" }
lofty = { version = "0.22.4" }
serde_json = { version = "1.0.145" }
urlencoding = { version = "2.1.3" }
url = { version = "2.5.7" }

[workspace.lints.rust]
unused_imports = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
arithmetic_side_effects = "allow"
as_conversions = "warn"
await_holding_lock = "warn"
cast_possible_truncation = "warn"
clone_on_ref_ptr = "allow"
enum_glob_use = "allow"
expect_used = "allow"
explicit_iter_loop = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
get_first = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_return = "allow"
indexing_slicing = "warn"
integer_division = "warn"
just_underscores_and_digits = "allow"
match_same_arms = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
mod_module_files = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
neg_multiply = "allow"
new_without_default = "allow"
non_ascii_literal = "allow"
panic = "warn"
pattern_type_mismatch = "allow"
pub_use = "allow"
question_mark_used = "allow"
result_large_err = "warn"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "warn"
string_add = "allow"
tests_outside_test_module = "allow"
type_complexity = "allow"
unneeded_wildcard_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
unwrap_used = "warn"
used_underscore_items = "allow"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"
wrong_self_convention = "allow"
