[package]
name = "studiole-di-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for studiole-di."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
