[package]
name = "studiole-di"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A simple dependency injection framework for Rust."

[dependencies]
studiole-di-macros = { workspace = true }
studiole-report = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
