[package]
name = "studiole-di"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dependency injection container with trait object resolution and lifetime management."

[features]
async = []
traits = []

[dependencies]
studiole-report = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
